--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ ACCESS_TOKEN_SECRET = Otu34hin_090jwlfn10nsSDkokpiOMoMwdno8222223ron-__9ujoicjJS
 ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_SECRET = WPMIOjONWounO3j0OM_-wk-_jm9PUMm_i-m--_i-mu0i-u08y93h2983ho2
 REFRESH_TOKEN_EXPIRY = 10d
+CLOUDINARY_CLOUD_NAME=myCloud
+CLOUDINARY_API_SECRET=jmd41l_nKSz8oCxiMJfDSoHEp1Y
+CLOUDINARY_API_KEY=396254472359487
